--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,6 +17,7 @@
 	text-align: center;
 }
 
+
 .flex-center {
 	display: flex;
 	justify-content: center;
@@ -42,6 +43,17 @@
 
 .navigation {
 	border-bottom: .1rem solid #d1d1d1;
+}
+
+.navigation .splitter {
+	color: #505a65;
+	position: relative;
+	top: -0.15rem;
+	right: -0.2rem;
+}
+
+.navigation .current {
+	color: #505a65;
 }
 
 .description {
