--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,7 +17,6 @@
 	text-align: center;
 }
 
-
 .flex-center {
 	display: flex;
 	justify-content: center;
@@ -26,6 +25,11 @@
 
 .disabled {
 	display: none;
+}
+
+.faded {
+	color: #b6c1ca;
+	pointer-events: none;
 }
 
 .invisible {
@@ -38,11 +42,22 @@
 	line-height: 5.2rem;
 	padding: 0;
 	text-decoration: none;
-	cursor: pointer;
+}
+
+.navigation .site-title {
+	font-weight: bolder;
+	margin-right: 4rem;
+}
+
+.navigation .message {
+	display: inline;
+	line-height: 3rem;
+	padding: 0;
 }
 
 .navigation {
 	border-bottom: .1rem solid #d1d1d1;
+	user-select: none;
 }
 
 .navigation .splitter {
@@ -86,6 +101,17 @@
 	width: 100%;
 	min-height: 40rem;
 	height: 70vh;
+}
+
+.error-bar {
+	background-color: #fd4343;
+	color: #eeeeee;
+}
+
+
+/* Override Milligram defaults */
+.container {
+	max-width: 60rem;
 }
 
 /* Override input text color to make it readable in dark-mode browsers. */
