--- a/src/css/style.css
+++ b/src/css/style.css
@@ -109,6 +109,17 @@
 	color: #eeeeee;
 }
 
+.image-block {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	max-height: 30rem;
+}
+
+.faq-link {
+	cursor: pointer;
+}
+
 
 /* Override Milligram defaults */
 .container {
