--- a/src/css/style.css
+++ b/src/css/style.css
@@ -70,6 +70,11 @@ a {
 	visibility: hidden;
 }
 
+.float-right {
+	float: right;
+}
+
+
 .navigation .title {
 	display: inline;
 	font-size: 1.6rem;
@@ -155,6 +160,42 @@ a {
 	cursor: pointer;
 }
 
+#category-names-outer-container {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	margin-bottom: 100rem;
+}
+
+#category-names-container {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+#category-overview-button {
+	cursor: pointer;
+}
+
+.large-button {
+	height: 5rem;
+	width: 13rem;
+	margin: 0.5rem;
+	border-radius: 1rem;
+	font-size: 1.5rem;
+	line-height: 5rem;
+	padding: 0 1.5rem;
+	text-align: center;
+	text-transform: none;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+}
+
+.category-button {
+	background-color: var(--color-background-light);
+	border: 0.1rem solid var(--color-primary);
+	color: var(--color-primary);
+}
 
 /* Override Milligram defaults */
 .container {
