--- a/src/frontend/css/style.css
+++ b/src/frontend/css/style.css
@@ -1,232 +1,245 @@
 /* Customize style */
 
 :root {
-	--color-background: #2a2c2b;
-	--color-background-light: #484a49;
-	--color-background-light-hover: #646665;
-	--color-primary: #dee4e8;
-	--color-theme: #fa5b0f;
-	--color-theme-light: #ff7729;
+    --color-background: #2a2c2b;
+    --color-background-light: #484a49;
+    --color-background-light-hover: #646665;
+    --color-primary: #dee4e8;
+    --color-theme: #fa5b0f;
+    --color-theme-light: #ff7729;
 }
 
-html, body {
-	background-color: var(--color-background);
-	color: var(--color-primary);
+html,
+body {
+    background-color: var(--color-background);
+    color: var(--color-primary);
 }
 
 a {
-	color: var(--color-theme);
+    color: var(--color-theme);
 }
 
-.button, button {
-	background-color: var(--color-theme);
-	color: var(--color-background);
-	border-color: var(--color-theme-light);
+.button,
+button {
+    background-color: var(--color-theme);
+    color: var(--color-background);
+    border-color: var(--color-theme-light);
 }
 
-.button.button-outline, button.button-outline {
-	background-color: var(--color-background-light);
-	color: var(--color-primary);
-	border-color: var(--color-primary);
+.button.button-outline,
+button.button-outline {
+    background-color: var(--color-background-light);
+    color: var(--color-primary);
+    border-color: var(--color-primary);
 }
 
 /* Custom classes */
 
 .margin-top-10 {
-	margin-top: 10rem;
+    margin-top: 10rem;
 }
 
 .margin-top-5 {
-	margin-top: 5rem;
+    margin-top: 5rem;
 }
 
 .button-small {
-	font-size: .8rem;
-	height: 2.8rem;
-	line-height: 2.8rem;
-	padding: 0 1.5rem;
+    font-size: 0.8rem;
+    height: 2.8rem;
+    line-height: 2.8rem;
+    padding: 0 1.5rem;
 }
 
 .text-center {
-	text-align: center;
+    text-align: center;
 }
 
 .flex-center {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .disabled {
-	display: none;
+    display: none;
 }
 
 .faded {
-	color: #b6c1ca;
-	pointer-events: none;
+    color: #b6c1ca;
+    pointer-events: none;
 }
 
 .invisible {
-	visibility: hidden;
+    visibility: hidden;
 }
 
 .float-right {
-	float: right;
+    float: right;
 }
 
-
 .navigation .title {
-	display: inline;
-	font-size: 1.6rem;
-	line-height: 5.2rem;
-	padding: 0;
-	text-decoration: none;
-	cursor: pointer;
+    display: inline;
+    font-size: 1.6rem;
+    line-height: 5.2rem;
+    padding: 0;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 .navigation .site-title {
-	font-weight: bolder;
-	margin-right: 4rem;
+    font-weight: bolder;
+    margin-right: 4rem;
 }
 
 .navigation .message {
-	display: inline;
-	line-height: 3rem;
-	padding: 0;
+    display: inline;
+    line-height: 3rem;
+    padding: 0;
 }
 
 .navigation {
-	border-bottom: .1rem solid #d1d1d1;
-	user-select: none;
+    border-bottom: 0.1rem solid #d1d1d1;
+    user-select: none;
 }
 
 .navigation .splitter {
-	color: #505a65;
-	position: relative;
-	top: -0.15rem;
-	right: -0.2rem;
+    color: #505a65;
+    position: relative;
+    top: -0.15rem;
+    right: -0.2rem;
 }
 
 .navigation .current {
-	color: var(--color-theme-light);
+    color: var(--color-theme-light);
 }
 
 .description {
-	display: block;
-	margin-bottom: 0.8rem;
+    display: block;
+    margin-bottom: 0.8rem;
 }
 
 .entry-column:before {
-	content: '';
-	display: block;
-	width: 15rem;
+    content: "";
+    display: block;
+    width: 15rem;
 }
 
 .text-icon {
-	font-weight: bold;
-	font-size: 4rem;
-	line-height: 3rem;
-	vertical-align: top;
+    font-weight: bold;
+    font-size: 4rem;
+    line-height: 3rem;
+    vertical-align: top;
 }
 
 .icon-cross {
-	color: #bb2244;
+    color: #bb2244;
 }
 
 .icon-ack {
-	color: #229944;
+    color: #229944;
 }
 
 .graph {
-	margin-left: -20px;
-	margin-right: -5px;
-	min-height: 40rem;
-	height: 70vh;
+    margin-left: -20px;
+    margin-right: -5px;
+    min-height: 40rem;
+    height: 70vh;
 }
 
 .error-bar {
-	background-color: #fd4343;
-	color: #eeeeee;
+    background-color: #fd4343;
+    color: #eeeeee;
 }
 
 .image-block {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	max-height: 30rem;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-height: 30rem;
 }
 
 .faq-link {
-	cursor: pointer;
+    cursor: pointer;
 }
 
 #category-names-outer-container {
-	width: 100%;
-	display: flex;
-	justify-content: center;
-	margin-bottom: 100rem;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 100rem;
 }
 
 #category-names-container {
-	display: flex;
-	flex-wrap: wrap;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 #category-overview-button {
-	cursor: pointer;
+    cursor: pointer;
 }
 
 .large-button {
-	height: 5rem;
-	width: 13rem;
-	margin: 0.5rem;
-	border-radius: 1rem;
-	font-size: 1.5rem;
-	line-height: 5rem;
-	padding: 0 1.5rem;
-	text-align: center;
-	text-transform: none;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-	overflow: hidden;
+    height: 5rem;
+    width: 13rem;
+    margin: 0.5rem;
+    border-radius: 1rem;
+    font-size: 1.5rem;
+    line-height: 5rem;
+    padding: 0 1.5rem;
+    text-align: center;
+    text-transform: none;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .category-button {
-	background-color: var(--color-background-light);
-	border: 0.1rem solid var(--color-primary);
-	color: var(--color-primary);
+    background-color: var(--color-background-light);
+    border: 0.1rem solid var(--color-primary);
+    color: var(--color-primary);
 }
 
 /* Override Milligram defaults */
 .container {
-	max-width: 75rem;
+    max-width: 75rem;
 }
 
 /* Override input text color to make it readable in dark-mode browsers. */
-input[type="color"], input[type="date"], input[type="datetime"],
-input[type="datetime-local"], input[type="email"], input[type="month"],
-input[type="number"], input[type="password"], input[type="search"],
-input[type="tel"], input[type="text"], input[type="url"], input[type="week"],
-input:not([type]), textarea, select {
-	color: var(--color-primary);
-	border-color: var(--color-primary);
+input[type="color"],
+input[type="date"],
+input[type="datetime"],
+input[type="datetime-local"],
+input[type="email"],
+input[type="month"],
+input[type="number"],
+input[type="password"],
+input[type="search"],
+input[type="tel"],
+input[type="text"],
+input[type="url"],
+input[type="week"],
+input:not([type]),
+textarea,
+select {
+    color: var(--color-primary);
+    border-color: var(--color-primary);
 }
 
-input[type='color']:focus,
-input[type='date']:focus,
-input[type='datetime']:focus,
-input[type='datetime-local']:focus,
-input[type='email']:focus,
-input[type='month']:focus,
-input[type='number']:focus,
-input[type='password']:focus,
-input[type='search']:focus,
-input[type='tel']:focus,
-input[type='text']:focus,
-input[type='url']:focus,
-input[type='week']:focus,
+input[type="color"]:focus,
+input[type="date"]:focus,
+input[type="datetime"]:focus,
+input[type="datetime-local"]:focus,
+input[type="email"]:focus,
+input[type="month"]:focus,
+input[type="number"]:focus,
+input[type="password"]:focus,
+input[type="search"]:focus,
+input[type="tel"]:focus,
+input[type="text"]:focus,
+input[type="url"]:focus,
+input[type="week"]:focus,
 input:not([type]):focus,
 textarea:focus,
 select:focus {
-  border-color: var(--color-theme);
+    border-color: var(--color-theme);
 }
