--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,6 +15,10 @@ body {
     color: var(--color-primary);
 }
 
+body {
+    overflow: hidden; /* Hide scrollbars */
+}
+
 a {
     color: var(--color-theme);
 }
@@ -33,8 +37,34 @@ button.button-outline {
     border-color: var(--color-primary);
 }
 
+/* Components */
+
+.app {
+    display: flex;
+    flex-flow: column;
+}
+
+.page {
+    flex: 1 1 auto;
+    background-color: var(--color-theme);
+}
+
+.nav {
+    flex: 0 1 5rem;
+    background-color: var(--color-background-light);
+}
+
 /* Custom classes */
 
+#app {
+    width: 100vw;
+    height: 100vh;
+}
+
+.full-size {
+    width: 100%;
+    height: 100%;
+}
 
 .margin-top-10 {
     margin-top: 10rem;
