--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,7 +49,11 @@ button.button-outline {
 
 .page {
     flex: 1 1 auto;
-    background-color: var(--color-background);
+    min-width: 32rem;
+    width: 85%;
+    max-width: 60rem;
+    margin: 0 auto;
+    background-color: var(--color-background-light);
 }
 
 .nav {
@@ -76,8 +80,8 @@ button.button-outline {
     top: 3.3rem;
     width: 100%;
     font-size: 1.5rem;
-    font-weight: 500;
     text-align: center;
+    user-select: none;
 }
 
 .nav .nav-button svg {
@@ -87,6 +91,11 @@ button.button-outline {
     width: 3.5rem;
     height: 3.5rem;
     fill: var(--color-fill-icon);
+}
+
+.nav .nav-button.selected {
+    filter: brightness(150%);
+    transition: filter 0.2s;
 }
 
 /* Custom classes */
