--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,18 +28,22 @@ a {
     color: var(--color-theme);
 }
 
-.button,
-button {
-    background-color: var(--color-theme);
-    color: var(--color-background);
-    border-color: var(--color-theme-light);
+.button {
+    background-color: var(--color-background-nav);
+    color: var(--color-primary);
+    border-color: var(--color-primary-deselected);
+    border-radius: 0.05rem;
+    border-width: 0.15rem;
+    font-size: 1.8rem;
+    line-height: 1.7rem;
+    padding: 0rem 1rem;
+    font-weight: initial;
+    text-transform: none;
 }
 
-.button.button-outline,
-button.button-outline {
+.button:hover {
     background-color: var(--color-background-light);
-    color: var(--color-primary);
-    border-color: var(--color-primary);
+    border-color: var(--color-background-light-hover);
 }
 
 /* Components */
@@ -55,7 +59,6 @@ button.button-outline {
     width: 85%;
     max-width: 60rem;
     margin: 0 auto;
-    background-color: var(--color-background-light);
 }
 
 .nav {
@@ -117,7 +120,7 @@ button.button-outline {
 }
 
 .tab-nav .tab-nav-button {
-    margin: 0.7rem 1.05rem 0rem;
+    margin: 0.7rem 1.05rem 0.5rem;
     font-size: 2.2rem;
     user-select: none;
     cursor: pointer;
@@ -125,6 +128,104 @@ button.button-outline {
 }
 
 .tab-nav .tab-nav-button.selected {
+    color: var(--color-primary-selected);
+}
+
+/* Home view */
+
+.home-title {
+    width: 100%;
+    text-align: center;
+    margin-top: 4rem;
+}
+
+/* Sources tab */
+
+.sources-tab {
+    display: flex;
+    flex-flow: column;
+}
+
+.sources-summary {
+    flex: 0 1 auto;
+    display: flex;
+    width: 100%;
+    height: 10rem;
+    margin-top: 2.5rem;
+    justify-content: center;
+}
+
+.sources-summary-icon {
+    fill: var(--color-fill-icon);
+    width: 8rem;
+    height: 8rem;
+    vertical-align: bottom;
+}
+
+.sources-summary-separator {
+    width: 2rem;
+}
+
+.sources-summary-stat {
+    font-size: 3.5rem;
+    line-height: 8rem;
+}
+
+.sources-summary-stat-wide {
+    min-width: 11.5rem;
+    max-width: 11.5rem;
+    text-align: right;
+    display: inline-block;
+}
+
+.sources-summary-label {
+    float: right;
+    font-size: 1.5rem;
+    line-height: 0.5rem;
+    width: 8rem;
+    text-align: center;
+}
+
+.sources-list {
+    flex: 1 1 auto;
+}
+
+.sources-entry {
+    flex: 0 1 6rem;
+}
+
+.sources-entry button {
+    margin: 0rem 0.8rem;
+    max-width: 15rem;
+    position: relative;
+}
+
+.sources-options {
+    position: absolute;
+    max-width: 100%;
+    bottom: 3.5rem;
+    padding-top: 0.9rem;
+    padding-bottom: 0.7rem;
+    box-sizing: content-box;
+
+    left: -0.1rem;
+    right: -0.1rem;
+    background-color: var(--color-background-nav);
+    border: 0.15rem solid var(--color-primary-deselected);
+    border-bottom: none;
+}
+
+.sources-options span {
+    display: block;
+    width: 100%;
+    line-height: 3rem;
+    margin-left: 0.5rem;
+    vertical-align: middle;
+    text-align: left;
+    color: var(--color-primary-deselected);
+}
+
+.sources-options span:hover {
     color: var(--color-primary-selected);
 }
 
@@ -166,6 +267,10 @@ button.button-outline {
     align-items: center;
 }
 
+.flex-item-full {
+    flex: 1 1 auto;
+}
+
 .disabled {
     display: none;
 }
@@ -181,42 +286,6 @@ button.button-outline {
 
 .float-right {
     float: right;
-}
-
-.navigation .title {
-    display: inline;
-    font-size: 1.6rem;
-    line-height: 5.2rem;
-    padding: 0;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-.navigation .site-title {
-    font-weight: bolder;
-    margin-right: 4rem;
-}
-
-.navigation .message {
-    display: inline;
-    line-height: 3rem;
-    padding: 0;
-}
-
-.navigation {
-    border-bottom: 0.1rem solid #d1d1d1;
-    user-select: none;
-}
-
-.navigation .splitter {
-    color: #505a65;
-    position: relative;
-    top: -0.15rem;
-    right: -0.2rem;
-}
-
-.navigation .current {
-    color: var(--color-theme-light);
 }
 
 .description {
