--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,7 +56,7 @@ a {
 .view {
     flex: 1 1 auto;
     min-width: 32rem;
-    width: 85%;
+    width: 90%;
     max-width: 60rem;
     margin: 0 auto;
 }
@@ -188,6 +188,7 @@ a {
 
 .sources-list {
     flex: 1 1 auto;
+    overflow-y: auto;
 }
 
 .sources-entry {
@@ -227,6 +228,75 @@ a {
 
 .sources-options span:hover {
     color: var(--color-primary-selected);
+}
+
+.sources-item {
+    position: relative;
+    width: 100%;
+    height: 6.5rem;
+    margin: 1rem 0rem;
+    border: 0.2rem solid var(--color-primary-deselected);
+}
+
+.sources-item * {
+    position: absolute;
+
+    font-size: 1.3rem;
+}
+
+.sources-item-remove-button {
+    right: 0.25rem;
+    bottom: 1rem;
+    width: 4.2rem;
+    height: 4.2rem;
+    transform: scale(0.75, 1);
+    fill: var(--color-fill-icon);
+}
+
+.sources-item-name {
+    position: absolute;
+    left: 1rem;
+    top: 0.4rem;
+    font-size: 2rem;
+    width: calc(100% - 5rem);
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.sources-item-date {
+    position: absolute;
+    left: 0.9rem;
+    bottom: 0.7rem;
+    font-size: 1.2rem;
+}
+
+.sources-item-accounts {
+    right: 11.7rem;
+    bottom: 0.6rem;
+}
+
+.sources-item-accounts-icon {
+    position: absolute;
+    right: 10rem;
+    width: 1.7rem;
+    height: 1.7rem;
+    bottom: 0.8rem;
+    fill: var(--color-fill-icon);
+}
+
+.sources-item-transactions {
+    right: 6rem;
+    bottom: 0.6rem;
+}
+
+.sources-item-transactions-icon {
+    position: absolute;
+    right: 4.1rem;
+    width: 1.8rem;
+    height: 1.8rem;
+    bottom: 0.8rem;
+    fill: var(--color-fill-icon);
 }
 
 /* Custom classes */
@@ -333,7 +403,7 @@ a {
     max-height: 30rem;
 }
 
-.faq-link {
+.clickable {
     cursor: pointer;
 }
 
