--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55,6 +55,7 @@ a {
 
 .view {
     flex: 1 1 auto;
+    position: relative;
     min-width: 32rem;
     width: 90%;
     max-width: 60rem;
@@ -142,12 +143,16 @@ a {
 /* Sources tab */
 
 .sources-tab {
+    position: absolute;
+    left: 0rem;
+    right: 0rem;
+    top: 0rem;
+    bottom: 0rem;
     display: flex;
     flex-flow: column;
 }
 
 .sources-summary {
-    flex: 0 1 auto;
     display: flex;
     width: 100%;
     height: 10rem;
@@ -187,54 +192,21 @@ a {
 }
 
 .sources-list {
-    flex: 1 1 auto;
+    flex: auto;
     overflow-y: auto;
+    margin: 1rem 0rem;
+    padding: -1rem 0rem 0rem;
 }
 
-.sources-entry {
-    flex: 0 1 6rem;
-}
-
-.sources-entry button {
-    margin: 0rem 0.8rem;
-    max-width: 15rem;
-    position: relative;
-}
-
-.sources-options {
-    position: absolute;
-    max-width: 100%;
-    bottom: 3.5rem;
-    padding-top: 0.9rem;
-    padding-bottom: 0.7rem;
-    box-sizing: content-box;
-
-    left: -0.1rem;
-    right: -0.1rem;
-    background-color: var(--color-background-nav);
-    border: 0.15rem solid var(--color-primary-deselected);
-    border-bottom: none;
-}
-
-.sources-options span {
-    display: block;
-    width: 100%;
-    line-height: 3rem;
-    margin-left: 0.5rem;
-    vertical-align: middle;
-    text-align: left;
-    color: var(--color-primary-deselected);
-}
-
-.sources-options span:hover {
-    color: var(--color-primary-selected);
+.sources-list > :last-of-type {
+    margin: 0.5rem 0rem 0.5rem;
 }
 
 .sources-item {
     position: relative;
     width: 100%;
     height: 6.5rem;
-    margin: 1rem 0rem;
+    margin: 0.5rem 0rem 1.5rem;
     border: 0.2rem solid var(--color-primary-deselected);
 }
 
@@ -297,6 +269,45 @@ a {
     height: 1.8rem;
     bottom: 0.8rem;
     fill: var(--color-fill-icon);
+}
+
+.sources-entry {
+    margin-bottom: 1.2rem;
+}
+
+.sources-entry button {
+    margin: 0rem 0.8rem;
+    max-width: 15rem;
+    position: relative;
+}
+
+.sources-selection {
+    position: absolute;
+    max-width: 100%;
+    bottom: 3.5rem;
+    padding-top: 0rem;
+    padding-bottom: 0.7rem;
+    box-sizing: content-box;
+
+    left: -0.1rem;
+    right: -0.1rem;
+    background-color: var(--color-background-nav);
+    border: 0.15rem solid var(--color-primary-deselected);
+    border-bottom: none;
+}
+
+.sources-selection span {
+    display: block;
+    width: calc(100% - 1rem);
+    padding: 0.5rem 0rem 0.5rem 1rem;
+    line-height: 2rem;
+    text-align: left;
+    color: var(--color-primary-deselected);
+}
+
+.sources-selection span:hover {
+    color: var(--color-primary-selected);
+    background: var(--color-background-light-hover);
 }
 
 /* Custom classes */
