--- a/public/css/style.css
+++ b/public/css/style.css
@@ -381,57 +381,55 @@ a {
 }
 
 .transaction-amount {
-    left: 1rem;
-    top: 0.2rem;
-    font-size: 2.5rem;
-    width: 14rem;
+    left: -0.5rem;
+    top: 0.45rem;
+    font-size: 2.2rem;
+    width: 13rem;
     white-space: nowrap;
-    overflow: hidden;
+    text-overflow: ellipsis;
     text-align: right;
 }
 
-.transaction-direction-up {
-    left: 15.6rem;
-    top: 1.9rem;
+.transaction-direction-up,
+.transaction-direction-down {
+    left: 13rem;
+
     width: 0;
     height: 0;
     border-left: 0.5rem solid transparent;
     border-right: 0.5rem solid transparent;
+}
 
+.transaction-direction-up {
+    top: 2rem;
     border-bottom: 0.7rem solid var(--color-theme-positive);
 }
 
 .transaction-direction-down {
-    left: 15.6rem;
-    top: 2.02rem;
-    width: 0;
-    height: 0;
-    border-left: 0.5rem solid transparent;
-    border-right: 0.5rem solid transparent;
-
+    top: 2.1rem;
     border-top: 0.7rem solid var(--color-theme-negative);
 }
 
-.transaction-title {
-    right: 1.5rem;
-    top: 0.1rem;
-    font-size: 1.7rem;
-    width: calc(100% - 18rem);
+.transaction-title,
+.transaction-description {
+    right: 0.5rem;
+    width: calc(100% - 15.5rem);
+    text-align: center;
+    text-transform: none;
+    text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
-    text-align: center;
+}
+
+.transaction-title {
+    top: 0.1rem;
+    font-size: 1.7rem;
 }
 
 .transaction-description {
-    right: 1.5rem;
     bottom: 0.4rem;
     font-size: 1.2rem;
-    width: calc(100% - 18rem);
     color: var(--color-primary-deselected);
-    font-weight: 100;
-    white-space: nowrap;
-    overflow: hidden;
-    text-align: center;
 }
 
 .transaction-group > .collection-item {
