--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,8 @@
     --color-background: #1f1f1f;
     --color-background-nav: #222222;
     --color-background-button: #2f2f2f;
+    --color-background-button-dark: #282828;
+    --color-background-button-light: #3f3f3f;
     --color-background-light-hover: #646665;
     --color-border-nav: #2a2a2a;
     --color-fill-icon: #a6a6a6;
@@ -46,6 +48,14 @@ a {
 .button:hover {
     background-color: var(--color-background-light);
     border-color: var(--color-background-light-hover);
+}
+
+.button-light {
+    background-color: var(--color-background-button-light);
+}
+
+.button-dark {
+    background-color: var(--color-background-button-dark);
 }
 
 /* Components */
@@ -133,6 +143,21 @@ a {
 .tab-nav .tab-nav-button.selected {
     color: var(--color-primary-selected);
     transition: color 0.2s;
+}
+
+.tab-splitter {
+    margin-left: -150rem;
+    width: 360rem;
+    height: 3.5rem;
+    background-color: var(--color-primary-deselected);
+}
+
+.tab-heading {
+    display: block;
+    height: 4rem;
+    width: 100%;
+    font-size: 2rem;
+    text-align: center;
 }
 
 /* Home view */
@@ -434,6 +459,25 @@ a {
 
 .transaction-group > .collection-item {
     height: 5.2rem;
+}
+
+.collection-grid {
+    flex: 0 1 400%;
+    max-height: 20rem;
+    overflow-y: auto;
+
+    display: flex;
+    align-content: flex-start;
+    flex-wrap: wrap;
+    flex-flow: row wrap;
+}
+
+.grid-item {
+    border: 0.25rem solid var(--color-primary-deselected);
+    width: 18.25rem;
+    height: 7rem;
+    margin: 0.6rem;
+    padding-top: 2rem;
 }
 
 /* Custom classes */
