--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,8 @@
 /* Customize style */
 
 :root {
-	--color-background: #2a2c2b;
+	--color-background:  #1f1f1f;
+	--color-background-field:  #242424;
 	--color-background-light: #484a49;
 	--color-background-light-hover: #646665;
 	--color-primary: #dee4e8;
@@ -96,7 +97,7 @@ a {
 }
 
 .navigation {
-	border-bottom: .1rem solid #d1d1d1;
+	border-bottom: .1rem solid var(--color-background-light);
 	user-select: none;
 }
 
@@ -210,6 +211,7 @@ input[type="tel"], input[type="text"], input[type="url"], input[type="week"],
 input:not([type]), textarea, select {
 	color: var(--color-primary);
 	border-color: var(--color-primary);
+	background-color: var(--color-background-field);
 }
 
 input[type='color']:focus,
