--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,7 @@
 :root {
     --color-background: #1f1f1f;
     --color-background-nav: #222222;
+    --color-background-nav-selected: #1d1d1d;
     --color-background-button: #2f2f2f;
     --color-background-button-dark: #282828;
     --color-background-button-light: #3f3f3f;
@@ -33,7 +34,7 @@ a {
     background-color: var(--color-background-button);
     color: var(--color-primary);
     border-color: var(--color-primary-deselected);
-    border-radius: 0.05rem;
+    border-radius: 0.4rem;
     border-width: 0.15rem;
     font-size: 1.8rem;
     line-height: 1.7rem;
@@ -83,11 +84,13 @@ a {
 
 .nav .nav-button {
     width: 7rem;
-    height: 100%;
-    margin: 0 0.7rem;
+    height: calc(100% - 0.1rem);
+    margin: 0.05rem 0.7rem;
     position: relative;
     cursor: pointer;
     -webkit-tap-highlight-color: transparent;
+
+    border-radius: 1rem;
 }
 
 .nav .nav-button span {
@@ -95,7 +98,7 @@ a {
     left: 0;
     top: 3.3rem;
     width: 100%;
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     text-align: center;
     user-select: none;
     color: var(--color-primary-deselected);
@@ -120,6 +123,10 @@ a {
     transition: color 0.2s;
 }
 
+.nav .nav-button.selected {
+    background-color: var(--color-background-nav-selected);
+}
+
 .tab-nav {
     flex: 0 1 5rem;
     background-color: var(--color-background-nav);
@@ -137,10 +144,14 @@ a {
     cursor: pointer;
     -webkit-tap-highlight-color: transparent;
     color: var(--color-primary-deselected);
+    padding: 0rem 1rem;
+
+    border-radius: 1rem;
 }
 
 .tab-nav .tab-nav-button.selected {
     color: var(--color-primary-selected);
+    background-color: var(--color-background-nav-selected);
     transition: color 0.2s;
 }
 
@@ -260,7 +271,8 @@ a {
     width: 100%;
     height: 6.25rem;
     margin: 0.5rem 0rem 1.1rem;
-    border: 0.2rem solid var(--color-primary-deselected);
+    border: 0.15rem solid var(--color-primary-deselected);
+    border-radius: 0.4rem;
     background-color: var(--color-background-nav);
 }
 
@@ -492,7 +504,7 @@ a {
 .grid-item {
     display: inline-block;
     vertical-align: top;
-    border: 0.25rem solid var(--color-primary-deselected);
+    border: 0.15rem solid var(--color-primary-deselected);
     width: calc(33% - 1.2rem);
     height: 7rem;
     margin: 0.6rem;
