--- a/public/css/style.css
+++ b/public/css/style.css
@@ -203,6 +203,20 @@ a {
     text-align: center;
 }
 
+.sub-tab-heading {
+    display: block;
+    height: 2.5rem;
+    font-size: 1.5rem;
+    text-align: center;
+}
+
+.expand-button {
+    position: absolute;
+    right: 2px;
+    top: 0px;
+    transform: scale(0.6);
+}
+
 /* Home view */
 
 .home-title {
