--- a/public/css/style.css
+++ b/public/css/style.css
@@ -593,17 +593,24 @@ a {
 
 #app {
     width: 100vw;
-    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+
+    /* The --vh CSS variable is set to the viewport height,
+       _without_ the browser navbar (important for mobile). */
     height: calc(var(--vh, 1vh) * 100);
+    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
 }
 
 .option-selection-options {
     box-sizing: content-box;
+    z-index: 10;
 
     left: -0.1rem;
     right: -0.1rem;
     background-color: var(--color-background-nav);
     border: 0.15rem solid var(--color-primary-deselected);
+
+    overflow-y: auto;
+    max-height: 50vh;
 }
 
 .option-selection-options.drop-down {
@@ -638,6 +645,11 @@ a {
     background: var(--color-background-light-hover);
 }
 
+.period-selection-year {
+    min-width: 14rem;
+    max-width: 14rem;
+}
+
 .full-size {
     width: 100%;
     height: 100%;
@@ -661,6 +673,14 @@ a {
 
 .margin-bottom-small {
     margin-bottom: 0.5rem;
+}
+
+.margin-left-small {
+    margin-left: 0.5rem;
+}
+
+.margin-right-small {
+    margin-left: 0.5rem;
 }
 
 .button-small {
