--- a/public/css/style.css
+++ b/public/css/style.css
@@ -438,27 +438,6 @@ a {
     line-height: 3.5rem;
     user-select: none;
 }
-
-.sources-entry .select-tick {
-    position: absolute;
-    bottom: 50%;
-    right: 0.3rem;
-    font-size: 1.4rem;
-    line-height: 0.3rem;
-    color: var(--color-primary-deselected);
-}
-
-.sources-entry .select-name {
-    position: absolute;
-    left: 1rem;
-    right: 1.5rem;
-    top: 1rem;
-    vertical-align: middle;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    text-align: left;
-}
-
 .sources-entry-open-button {
     margin-left: 1.2rem;
     margin-right: 1.2rem;
@@ -559,16 +538,18 @@ a {
     align-items: center;
     justify-content: center;
     text-align: center;
-    word-wrap: break-word;
-    white-space: initial;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 /* Budget tab */
 
 .budget-entry {
+    position: relative;
     width: 9rem;
     height: 100%;
-    position: relative;
+    margin-right: 1.05rem;
 }
 
 .budget-entry input {
@@ -587,6 +568,7 @@ a {
     text-align: center;
     font-size: 1.15rem;
     user-select: none;
+    white-space: nowrap;
 }
 
 .progress-bar {
@@ -667,15 +649,15 @@ a {
     }
 }
 
-/* Custom classes */
+/* Custom components */
 
 #app {
     width: 100vw;
 
     /* The --vh CSS variable is set to the viewport height,
        _without_ the browser navbar (important for mobile). */
-    height: calc(var(--vh, 1vh) * 100);
     height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+    height: calc(var(--vh, 1vh) * 100);
 }
 
 .option-selection-options {
@@ -727,6 +709,8 @@ a {
     min-width: 12.3rem;
     max-width: 12.3rem;
 }
+
+/* Utility classes */
 
 .full-size {
     width: 100%;
@@ -809,24 +793,6 @@ a {
     float: right;
 }
 
-.description {
-    display: block;
-    margin-bottom: 0.8rem;
-}
-
-.entry-column:before {
-    content: "";
-    display: block;
-    width: 15rem;
-}
-
-.text-icon {
-    font-weight: bold;
-    font-size: 4rem;
-    line-height: 3rem;
-    vertical-align: top;
-}
-
 .icon-cross {
     color: #bb2244;
 }
@@ -843,54 +809,8 @@ a {
     color: var(--color-theme-negative);
 }
 
-.graph {
-    margin-left: -20px;
-    margin-right: -5px;
-    min-height: 40rem;
-    height: 70vh;
-}
-
-.error-bar {
-    background-color: #fd4343;
-    color: #eeeeee;
-}
-
-.image-block {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    max-height: 30rem;
-}
-
 .clickable {
     cursor: pointer;
-}
-
-#category-names-outer-container {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 100rem;
-}
-
-#category-names-container {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.large-button {
-    height: 5rem;
-    width: 100%;
-    margin: 0.5rem;
-    border-radius: 1rem;
-    font-size: 1.5rem;
-    line-height: 5rem;
-    padding: 0 1.5rem;
-    text-align: center;
-    text-transform: none;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
 }
 
 /* Override Milligram defaults */
